'push by pim@ojs+linux+6.1.31+quiqr-desktop-app-0.17.12'

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://example.com"
+baseURL = "https://technative-university.github.io/aws-technative-workshop-nl-gr-01/"
 disableKinds = [
   "sitemap",
   "RSS"
